RESOLVED FIXED170330
AX: Web article navigation does not work (article rotor for Facebook, Twitter, Messages etc.)
https://bugs.webkit.org/show_bug.cgi?id=170330
Summary AX: Web article navigation does not work (article rotor for Facebook, Twitter...
chris fleizach
Reported 2017-03-31 01:07:57 PDT
Add a search key for article searching
Attachments
patch (6.95 KB, patch)
2017-03-31 01:10 PDT, chris fleizach
buildbot: commit-queue-
Archive of layout-test-results from ews101 for mac-elcapitan (917.65 KB, application/zip)
2017-03-31 02:18 PDT, Build Bot
no flags
Archive of layout-test-results from ews115 for mac-elcapitan (1.70 MB, application/zip)
2017-03-31 02:31 PDT, Build Bot
no flags
patch (4.80 KB, patch)
2017-03-31 09:56 PDT, chris fleizach
no flags
chris fleizach
Comment 1 2017-03-31 01:08:16 PDT
chris fleizach
Comment 2 2017-03-31 01:10:59 PDT
Build Bot
Comment 3 2017-03-31 02:17:59 PDT
Comment on attachment 305953 [details] patch Attachment 305953 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/3448185 New failing tests: accessibility/mac/search-predicate.html
Build Bot
Comment 4 2017-03-31 02:18:00 PDT
Created attachment 305959 [details] Archive of layout-test-results from ews101 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Build Bot
Comment 5 2017-03-31 02:31:31 PDT
Comment on attachment 305953 [details] patch Attachment 305953 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/3448214 New failing tests: accessibility/mac/search-predicate.html
Build Bot
Comment 6 2017-03-31 02:31:32 PDT
Created attachment 305961 [details] Archive of layout-test-results from ews115 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews115 Port: mac-elcapitan Platform: Mac OS X 10.11.6
chris fleizach
Comment 7 2017-03-31 09:56:18 PDT
WebKit Commit Bot
Comment 8 2017-04-11 10:00:33 PDT
Comment on attachment 305978 [details] patch Clearing flags on attachment: 305978 Committed r215236: <http://trac.webkit.org/changeset/215236>
WebKit Commit Bot
Comment 9 2017-04-11 10:00:34 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.