AX: Web article navigation does not work (article rotor for Facebook, Twitter, Messages etc.) https://bugs.webkit.org/show_bug.cgi?id=170330 <rdar://problem/31366105>

Reviewed by Joanmarie Diggs.

Source/WebCore:

Add a search ability for the "article" role.

Test: accessibility/mac/search-predicate-article.html

* accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::isAccessibilityObjectSearchMatchAtIndex):
* accessibility/AccessibilityObject.h:
* accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:
(-[WebAccessibilityObjectWrapper _accessibilityArticleAncestor]):
* accessibility/mac/WebAccessibilityObjectWrapperBase.mm:
(createAccessibilitySearchKeyMap):

LayoutTests:

* accessibility/mac/search-predicate-article-expected.txt:
* accessibility/mac/search-predicate-article.html:


Canonical link: https://commits.webkit.org/187662@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215236 268f45cc-cd09-0410-ab3c-d52691b4dbfc