Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperBase.mm
@@ -72,6 +72,10 @@ using namespace HTMLNames;
 #define NSAccessibilityAnyTypeSearchKey @"AXAnyTypeSearchKey"
 #endif
 
+#ifndef NSAccessibilityArticleSearchKey
+#define NSAccessibilityArticleSearchKey @"AXArticleSearchKey"
+#endif
+
 #ifndef NSAccessibilityBlockquoteSameLevelSearchKey
 #define NSAccessibilityBlockquoteSameLevelSearchKey @"AXBlockquoteSameLevelSearchKey"
 #endif
@@ -649,6 +653,7 @@ static AccessibilitySearchKeyMap* createAccessibilitySearchKeyMap()
 {
     const SearchKeyEntry searchKeys[] = {
         { NSAccessibilityAnyTypeSearchKey, AnyTypeSearchKey },
+        { NSAccessibilityArticleSearchKey, ArticleSearchKey },
         { NSAccessibilityBlockquoteSameLevelSearchKey, BlockquoteSameLevelSearchKey },
         { NSAccessibilityBlockquoteSearchKey, BlockquoteSearchKey },
         { NSAccessibilityBoldFontSearchKey, BoldFontSearchKey },
